Sun Jan 16 22:06:30 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* too/rbinstall.rb (install?(:ext, :comm, :gem)): no longer 
	  installs no-versioned gempsecs. [ruby-core:34011]
	  Patch by Luis Lavena.

Fri Jan 14 15:32:29 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/imap/test_imap.rb: call neither logout nor disconnect
	  unless connected.  patch by Kazuhiro NISHIYAMA.  [ruby-dev:42860]

Fri Jan 14 14:56:57 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/imap.rb: use bytesize for binary strings.
	  patched by Yoshimasa Niwa. [ruby-core:34222]

Fri Jan 14 13:38:58 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_check_footer): ISIZE (Input SIZE) in
	  gzip's header is the size of uncompressed input data modulo 2^32.
	  [ruby-core:34481] http://www.ietf.org/rfc/rfc1952.txt

Fri Jan 14 07:30:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_next_argv): go advance when the next file cannot be
	  read.  [ruby-core:34446]

Wed Jan 12 23:55:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_f_syscall): Add 64bit Linux support. Some syscall takes
	  long type arguments.

Thu Jan 13 00:06:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_f_syscall): Add warning messages. [ruby-core:34062]

Thu Jan 13 00:00:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_f_syscall): Some syscall return unsigned or pointer value.
	  Therefore we should only check the result is -1 or not. [ruby-core:34062]

Wed Jan 12 16:25:12 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/net/http.rb (Net::HTTP#connect): makes it timeout during 
	  SSL handshake too. [ruby-core:34203]
	  Patch by Marc Slemko.

	* test/net/http/test_http.rb (TestNetHTTP_v1_2#test_timeout_during_HTTP_session):
	  test for [ruby-core:34203]

	* test/net/http/test_https.rb (TestNetHTTPS#test_timeout_during_SSL_handshake):
	  ditto.

Sun Jan  9 16:31:53 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
