@@ -3,11 +3,11 @@ require_relative 'helper'
 module Psych
   class TestJSONTree < TestCase
     def test_string
-      assert_match(/(['"])foo\1/, Psych.to_json("foo"))
+      assert_match(/"foo"/, Psych.to_json("foo"))
     end
 
     def test_symbol
-      assert_match(/(['"])foo\1/, Psych.to_json(:foo))
+      assert_match(/"foo"/, Psych.to_json(:foo))
     end
 
     def test_nil
@@ -36,8 +36,8 @@ module Psych
       json = Psych.to_json(list)
       assert_match(/]$/, json)
       assert_match(/^\[/, json)
-      assert_match(/['"]one['"]/, json)
-      assert_match(/['"]two['"]/, json)
+      assert_match(/"one"/, json)
+      assert_match(/"two"/, json)
     end
   end
 end
